tests/passing/generics_call_zero.tails
func zero<T>() -> unit:
  pass

func tests() -> unit:
  discard zero::<int>()
  discard zero::<real>()
  discard zero::<str>()
  discard zero::<*int>()
