tests/failing/type_def_generics_mutually_recursive.tails
type A<T> = B<T>
type B<T> = A<T>

func tests() -> unit:
  pass
